[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.2.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
google-oauth = { version = "1" }
actix-web = "4"
dotenv = "0.15.0"
