[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.2.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
google-oauth = { version = "1" }
actix-web = "4"
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres","chrono","r2d2","serde_json", "uuid"] }
chrono = { version = "0.4.35", features = ["serde"] }
r2d2 = "0.8.10"
log = "*"
ring = "0.17.8"
once_cell = "1.19.0"
validator = { version = "0.17.0", features = ["derive"] } # 0.16 because validator only supports this version otherwise we'd get trait mismatch